--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,37 @@ header img {
     margin-bottom: 10px;
     margin-left: 10px;
 }
+
+/* COMMON */
+.container {
+    width: 99%;
+    margin: auto;
+    
+}
+
+/* MAIN */
+main h1 {
+    margin-top: 20px;
+    font-size: 50px;
+}
+
+.author {
+    color: gray;
+    font-size: 18px;
+}
+
+#booleaner {
+    color: blue;
+    font-size: 18px;
+}
+
+.date {
+    color: gray;
+    font-size: 12px;
+    margin-bottom: 20px;
+}
+
+.description {
+    font-size: 12px;
+    margin-bottom: 20px;
+}
