--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 /* RESET */
 * {
     margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }       
 
@@ -33,12 +32,12 @@ main h1 {
 }
 
 .author {
-    color: lightgray;
+    color: #848484;
     font-size: 18px;
 }
 
 #booleaner {
-    color: blue;
+    color: #56beeb;
     font-size: 18px;
 }
 
@@ -51,4 +50,47 @@ main h1 {
 .description {
     font-size: 12px;
     margin-bottom: 20px;
+}
+
+.evidence {
+    background-color: yellow;
+}
+
+.list {
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+thead {
+    background-color: #20a9e5;
+    color: white;
+}
+
+.row{
+    background-color: #b1e5f2;
+}
+table {
+    margin-bottom: 20px;
+    border-collapse: collapse;
+}
+
+/* FOOTER */
+footer{
+    margin-top: 20px;
+}
+
+#final {
+    font-size: 20px;
+    color: #848484;
+}
+
+.monitor {
+    background-image: url("../img/monitor.jpg");
+    background-repeat: no-repeat;
+    background-size: 200px;
+}
+
+.graph {
+    background-image: url("../img/graph.jpg");
+    background-repeat: no-repeat;
 }
