--- a/css/style.css
+++ b/css/style.css
@@ -69,10 +69,12 @@ thead {
 .row{
     background-color: #b1e5f2;
 }
+
 table {
     margin-bottom: 20px;
     border-collapse: collapse;
 }
+
 
 /* FOOTER */
 footer{
@@ -87,10 +89,19 @@ footer{
 .monitor {
     background-image: url("../img/monitor.jpg");
     background-repeat: no-repeat;
-    background-size: 200px;
+    width: 250px;
+    height: 200px;
+    color: white;
+    font-size: 20px;
+    margin-top: 10px;
 }
 
 .graph {
     background-image: url("../img/graph.jpg");
     background-repeat: no-repeat;
+    color: white;
+    font-size: 20px;
+    margin-top: 10px;
+    width: 250px;
+    height: 200px;
 }
