--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 * {
     margin: 0;
     box-sizing: border-box;
+    padding: 0;
 }       
 
 /* HEADER */
@@ -20,7 +21,7 @@ header img {
 
 /* COMMON */
 .container {
-    width: 99%;
+    width: 97%;
     margin: auto;
     
 }
@@ -59,6 +60,7 @@ main h1 {
 .list {
     margin-bottom: 30px;
     margin-top: 30px;
+    margin-left: 30px;
 }
 
 thead {
@@ -73,6 +75,14 @@ thead {
 table {
     margin-bottom: 20px;
     border-collapse: collapse;
+}
+
+.col {
+    width: 50%;
+}
+
+thead {
+    text-align: left;
 }
 
 
@@ -90,7 +100,7 @@ footer{
     background-image: url("../img/monitor.jpg");
     background-repeat: no-repeat;
     width: 250px;
-    height: 200px;
+    height: 180px;
     color: white;
     font-size: 20px;
     margin-top: 10px;
@@ -103,5 +113,5 @@ footer{
     font-size: 20px;
     margin-top: 10px;
     width: 250px;
-    height: 200px;
+    height: 180px;
 }
